[package]
name = "RustRadar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
netcdf = { version="0.9.1", features = ["static"] }
nexrad = "0.0.3"
bevy_panorbit_camera = "0.17.0"
walkdir = "2.5.0"
glob = "0.3.1"
bytemuck = "1.15.0"
itertools = "0.12.1"
